--- a/navbar.html
+++ b/navbar.html
@@ -4,5 +4,6 @@
     <li><a href="All.html">All</a></li>
     <li><a href="Gaming.html">Gaming</a></li>
     <li><a href="T&C.html">T&C</a></li>
+    <li><a href="emotion-bot.html">Chat Bot</a></li>
   </ul>
 </nav>
