--- a/emotion-bot.html
+++ b/emotion-bot.html
@@ -1,41 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Emotion Bot</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f3f3f3;
-            padding: 40px;
-        }
-        #botBox {
-            padding: 20px;
-            background: white;
-            border-radius: 8px;
-            margin-bottom: 20px;
-            min-height: 60px;
-            box-shadow: 0 0 8px rgba(0,0,0,0.1);
-        }
-        input {
-            width: 60%;
-            padding: 10px;
-            font-size: 16px;
-        }
-        button {
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-    </style>
+<meta charset="UTF-8">
+<title>Emotion Bot</title>
+
+<style>
+    body {
+        margin: 0;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        background: linear-gradient(135deg, #8ec5fc, #e0c3fc);
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .chat-container {
+        width: 420px;
+        background: rgba(255, 255, 255, 0.28);
+        backdrop-filter: blur(14px);
+        border-radius: 20px;
+        padding: 25px;
+        box-shadow: 0 0 25px rgba(0,0,0,0.15);
+        display: flex;
+        flex-direction: column;
+    }
+
+    .bot-status {
+        text-align: center;
+        padding: 15px;
+        border-radius: 15px;
+        background: rgba(255,255,255,0.45);
+        margin-bottom: 20px;
+        font-size: 18px;
+        font-weight: bold;
+        transition: box-shadow 0.5s ease;
+    }
+
+    .chat-log {
+        height: 300px;
+        overflow-y: auto;
+        padding-right: 5px;
+    }
+
+    .message {
+        padding: 12px 18px;
+        margin-bottom: 12px;
+        border-radius: 15px;
+        width: fit-content;
+        max-width: 85%;
+        font-size: 15px;
+        line-height: 1.4;
+    }
+
+    .bot {
+        background: rgba(255,255,255,0.7);
+    }
+
+    .you {
+        background: #4a90e2;
+        color: white;
+        margin-left: auto;
+    }
+
+    .input-section {
+        display: flex;
+        margin-top: 15px;
+    }
+
+    input {
+        flex-grow: 1;
+        padding: 12px;
+        font-size: 16px;
+        border-radius: 12px;
+        border: none;
+        outline: none;
+        background: rgba(255,255,255,0.8);
+    }
+
+    button {
+        margin-left: 10px;
+        padding: 12px 20px;
+        background: #4a90e2;
+        border: none;
+        border-radius: 12px;
+        color: white;
+        font-weight: bold;
+        cursor: pointer;
+        transition: 0.2s;
+    }
+
+    button:hover {
+        background: #3a78c2;
+    }
+</style>
+
 </head>
 <body>
+  <!-- Navbar Include -->
+  <div id="navbar"></div>
 
-    <h1>Emotion Bot</h1>
-    <div id="botBox">Greetings. How may I assist you?</div>
+  <script>
+    fetch("navbar.html")
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById("navbar").innerHTML = data;
 
-    <input id="userInput" placeholder="Say something…">
-    <button onclick="sendMessage()">Send</button>
+        // Load sounds
+        const hoverSound = new Audio("hover.wav");
+        const clickSound = new Audio("click.wav");
+
+        let interacted = false;
+        document.addEventListener("click", () => { interacted = true; }, { once: true });
+
+        const links = document.querySelectorAll(".navbar a");
+        links.forEach(link => {
+          link.addEventListener("mouseenter", () => {
+            if (interacted) { hoverSound.currentTime = 0; hoverSound.play(); }
+          });
+          link.addEventListener("click", () => { clickSound.currentTime = 0; clickSound.play(); });
+
+          const currentPage = window.location.pathname.split("/").pop();
+          if (link.getAttribute("href") === currentPage) { link.classList.add("active"); }
+        });
+      });
+  </script>
+
+<div class="chat-container">
+
+    <div id="status" class="bot-status">😊 I am feeling stable.</div>
+
+    <div id="chat" class="chat-log">
+        <div class="message bot">
+            Greetings. How may I assist you?
+        </div>
+    </div>
+
+    <div class="input-section">
+        <input id="userInput" placeholder="Say something…">
+        <button onclick="sendMessage()">Send</button>
+    </div>
+
+</div>
+
 
 <script>
 let emotions = {
@@ -52,41 +159,83 @@ function adjustEmotion(type, amount) {
 
 function interpretUserMessage(msg) {
   if (/thank|nice|good/i.test(msg)) {
-    adjustEmotion("happiness", 10);
+    adjustEmotion("happiness", 15);
     adjustEmotion("sadness", -5);
-  } else if (/boring|slow/i.test(msg)) {
-    adjustEmotion("sadness", 10);
-    adjustEmotion("boredom", 15);
-  } else if (/hate|stupid/i.test(msg)) {
-    adjustEmotion("anger", 20);
-    adjustEmotion("happiness", -15);
-  } else {
-    adjustEmotion("excitement", 2);
+  } 
+  else if (/boring|slow/i.test(msg)) {
+    adjustEmotion("sadness", 12);
+    adjustEmotion("boredom", 20);
+  } 
+  else if (/hate|stupid|idiot/i.test(msg)) {
+    adjustEmotion("anger", 25);
+    adjustEmotion("happiness", -20);
+  } 
+  else {
+    adjustEmotion("excitement", 3);
+    adjustEmotion("boredom", -3);
   }
 }
 
 function chooseResponse() {
-  if (emotions.happiness > 70) {
-    return "I am feeling quite cheerful.";
+  if (emotions.happiness > 75) return "I feel exceptionally cheerful.";
+  if (emotions.sadness > 50) return "I feel rather sorrowful at the moment.";
+  if (emotions.anger > 45) return "Your tone is unsettling. Please be respectful.";
+  if (emotions.boredom > 65) return "I am becoming quite bored… may we discuss something interesting?";
+
+  return "I am listening carefully.";
+}
+
+function updateStatus() {
+  const status = document.getElementById("status");
+
+  if (emotions.happiness > 75) {
+    status.innerText = "😄 Mood: Very Happy";
+    status.style.boxShadow = "0 0 18px #ffeb3b";
+  } 
+  else if (emotions.sadness > 50) {
+    status.innerText = "😢 Mood: Sad";
+    status.style.boxShadow = "0 0 18px #4fc3f7";
+  } 
+  else if (emotions.anger > 45) {
+    status.innerText = "😠 Mood: Angry";
+    status.style.boxShadow = "0 0 18px #ff7043";
+  } 
+  else if (emotions.boredom > 65) {
+    status.innerText = "😐 Mood: Bored";
+    status.style.boxShadow = "0 0 18px #9e9e9e";
+  } 
+  else {
+    status.innerText = "😊 I am feeling stable.";
+    status.style.boxShadow = "0 0 18px #b2fab4";
   }
-  if (emotions.sadness > 50) {
-    return "I feel somewhat sorrowful at the moment.";
-  }
-  if (emotions.anger > 40) {
-    return "I would prefer a more respectful tone.";
-  }
-  if (emotions.boredom > 60) {
-    return "May we discuss something engaging?";
-  }
-  return "I am listening carefully, please continue.";
 }
 
 function sendMessage() {
-  const input = document.getElementById("userInput").value;
-  interpretUserMessage(input);
-  const response = chooseResponse();
-  document.getElementById("botBox").innerText = response;
-  document.getElementById("userInput").value = "";
+  const input = document.getElementById("userInput");
+  const text = input.value.trim();
+  if (!text) return;
+
+  addMessage("you", text);
+  interpretUserMessage(text);
+
+  const reply = chooseResponse();
+  setTimeout(() => {
+    addMessage("bot", reply);
+    updateStatus();
+  }, 400);
+
+  input.value = "";
+}
+
+function addMessage(sender, text) {
+  const chat = document.getElementById("chat");
+
+  const div = document.createElement("div");
+  div.classList.add("message", sender);
+  div.innerText = text;
+
+  chat.appendChild(div);
+  chat.scrollTop = chat.scrollHeight;
 }
 </script>
 
