--- a/emotion-bot.html
+++ b/emotion-bot.html
@@ -94,7 +94,7 @@
         background: #3a78c2;
     }
 </style>
-
+   <link rel="stylesheet" href="Main-Style.css">
 </head>
 <body>
   <!-- Navbar Include -->
